stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__invalid_principal_literal.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "046e2ff497114b8c2d9c5fc2dbd134cdb4682c332694d62039b3e3b7ec970c1a",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7a5753f370984b291aba666ffcf772ab2cca0dbdb7965c4b2b1aa5b101c138a5",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "58619e43b6b4be0ca035d686e6c17e28b5c1966b234e5ed5ba3fc6569df724a7",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f75a18f719def7c3536dd3b1f92e3b79cd50ecd475f3964e5171ab482c51d95b",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b7269f5656a5f5a13399cbf7c55d11d8edf5bd6ae6e6eea7ddab88fe995a8561",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4da69308ee8411758917e1c18758c2ac9cf96c7b2895c2441f0193b9d6eea5d7",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(invalid principal literal) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 0,
          write_count: 0,
          read_length: 0,
          read_count: 0,
          runtime: 2133,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 0,
      write_count: 0,
      read_length: 0,
      read_count: 0,
      runtime: 2133,
    ),
  )),
]
